hphp/test/zend/bad/tests/security/open_basedir_fileinode.php
<?php
require_once "open_basedir.inc";
test_open_basedir("fileinode");
?>
<?php
require_once "open_basedir.inc";
delete_directories();
?>